<resources>
    <string name="app_name">UberUniUlm</string>

    <string name="start_login_button_login_text">LOGIN</string>
    <string name="start_login_button_forgotpassword_text">Forgot password</string>
    <string name="start_login_button_register_text">| Register</string>
    <string name="start_login_username_title">E-Mail</string>
    <string name="start_login_password_title">Password</string>
    <string name="start_login_name_value_example">max.mustermann@uni-ulm.de</string>
    <string name="start_login_password_value_example">password</string>
    <string name="start_login_stay_loggedin">Stay logged in</string>
    <string name="start_login_password_hint">min. 6 characters</string>

    <string name="start_register_name_value_example">Max Mustermann</string>
    <string name="start_register_button_register">Register</string>
    <string name="start_register_name_title">Username</string>
    <string name="start_register_mail_title">E-Mail</string>
    <string name="start_login_button_login">Login</string>

    <string name="geocode_no_results">No geocoder results. Choose different location and try again.</string>
    <string name="api_response_error">API response error: \'%1$s\'.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="newOffer_title">Create ride</string>
    <string name="newOffer_date_title">Date</string>
    <string name="newOffer_time_title">Time</string>
    <string name="newOffer_start_title">Start location</string>
    <string name="newOffer_destination_title">Destination</string>
    <string name="newOffer_destination_field_hint">Enter your destination</string>
    <string name="newOffer_departure_field_hint">Enter yout departure</string>
    <string name="newOffer_waypoint_link">Add waypoint</string>
    <string name="newOffer_date_inthepast_error">Error: date is in the past!</string>
    <string name="newOffer_date_invalid_error">Error: date is not valid. Must be of format dd/mm/yyy.</string>
    <string name="newOffer_route_invalid_error">Error: invalid route. Cannot create offer.</string>

    <string name="dialog_manage_waypoints_title">Add waypoint</string>
    <string name="dialog_manage_waypoints_hint">Enter waypoint</string>
    <string name="dialog_manage_waypoints_max_number_hint">Max. number of waypoints reached</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="profile_email">E-Mail</string>
    <string name="profile_username">Username</string>
    <string name="profile_name">Name</string>

    <string name="addFilterDialog_title">Add Filter</string>


    <string name="notification_token_msg" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id">uberuniulm_notifications</string>
    <string name="chatPage_hint_text_editfield">Type a message...</string>
</resources>
