<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSlightlyTransparentBlack"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/startActivityRegisterPhotoContentContainer"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profileImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/start_register_profile_photo"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="5dp"
                app:civ_shadow="true"
                app:civ_shadow_color="@color/colorSemiTransparentBlack"
                app:civ_shadow_radius="5" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/startActivityChangeCameraBttn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="200dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:foreground="@android:drawable/ic_menu_camera"
                android:onClick="onProfileRegisterCameraBttn"
                android:padding="3dp"
                android:scaleType="fitXY"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/startActivityLoginInputContentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="100dp"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/startActivityLoginPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_username"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/profile_username"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/changeUsername"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_menu_manage" />
            </LinearLayout>

            <TextView
                android:id="@+id/startActivityLoginPasswordText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_email"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/profileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/start_login_password_value_example"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/start_login_password_value_example"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/changeEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:tint="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_menu_manage" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>